Update skill label from Machine Learning to Artificial Intelligence

--- a/skills.html
+++ b/skills.html
@@ -54,8 +54,8 @@
         </div>
 
         <div class="skill">
-            <img src="css/images/skills_images/ml_2.png" alt="ml"/>
-            <p>Machine Learning</p>
+            <img src="css/images/skills_images/ml_2.png" alt="ai"/>
+            <p>Artificial Intelligence</p>
         </div>
 
         <div class="skill">
