Update skill label from Data Viz to Data Visualization

--- a/skills.html
+++ b/skills.html
@@ -65,7 +65,7 @@
 
         <div class="skill">
             <img src="css/images/skills_images/dataviz_2.png" alt="data_viz"/>
-            <p>Data Viz</p>
+            <p>Data Visualization</p>
         </div>
 
         <div class="skill">
