Update skill from A/B Testing to Hardware - reflects PC building and AI rig experience

--- a/skills.html
+++ b/skills.html
@@ -59,8 +59,8 @@
         </div>
 
         <div class="skill">
-            <img src="css/images/skills_images/ab_2.png" alt="ab_testing"/>
-            <p>A/B Testing</p>
+            <img src="css/images/skills_images/ab_2.png" alt="hardware"/>
+            <p>Hardware</p>
         </div>
 
         <div class="skill">
