Update skill label from KPIs to Analytics

--- a/skills.html
+++ b/skills.html
@@ -44,8 +44,8 @@
         </div>
 
         <div class="skill">
-            <img src="css/images/skills_images/kpi_2.png" alt="KPIs"/>
-            <p>KPIs</p>
+            <img src="css/images/skills_images/kpi_2.png" alt="analytics"/>
+            <p>Analytics</p>
         </div>
 
         <div class="skill">
