Update skill label from Languages to Programming Languages for clarity

--- a/skills.html
+++ b/skills.html
@@ -69,8 +69,8 @@
         </div>
 
         <div class="skill">
-            <img src="css/images/skills_images/languages.png" alt="languages"/>
-            <p>Languages</p>
+            <img src="css/images/skills_images/languages.png" alt="programming_languages"/>
+            <p>Programming Languages</p>
         </div>
         
         <div class="skill">
